<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/LogInlogInButton"
        android:layout_alignParentEnd="true"
        android:src="@drawable/weddingdress2"
        android:alpha=".2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LogInXMLTitle"
        android:id="@+id/LogInTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/UsernameTV"
        android:id="@+id/registerPasswordTV"
        android:layout_marginTop="47dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_below="@+id/LogInTitle"
        android:layout_alignStart="@+id/UsernameInputET" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/UsernameInputET"
        android:hint="@string/UsernameHintTV"
        android:paddingTop="20dp"
        android:layout_below="@+id/registerPasswordTV"
        android:layout_alignStart="@+id/LogInPasswordET" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PasswordTV"
        android:id="@+id/logInPasswordTV"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/LogInPasswordET" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/LogInPasswordET"
        android:layout_below="@+id/logInPasswordTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/PasswordHintTV"
        android:password="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/LogInlogInButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/LogInBut"
        android:onClick="logInButtonEntered"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/charTB"
        android:layout_below="@+id/LogInPasswordET"
        android:layout_alignStart="@+id/LogInPasswordET"
        android:checked="false"
        android:onClick="showCharsEntered"
        android:textSize="10dp"
        android:textStyle="italic" />

</RelativeLayout>