<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView5"
        android:src="@drawable/weddingdress3"
        android:alpha=".2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout"
        android:paddingTop="25dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/ProfileTV"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow >
            <TextView android:text="@string/ProfileNameTV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Name"
                android:textStyle="bold|italic"
                android:paddingTop="20dp"
                android:paddingLeft="5dp"
                android:textSize="20dp" />
        </TableRow>
        <TableRow >
            <TextView android:text="@string/ProfileAddressTV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Address"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingBottom="40dp"
                android:layout_marginTop="20dp"/>
        </TableRow>
        <TableRow >
            <TextView android:text="@string/ProfileEmailTV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Email"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:paddingLeft="10dp" />
        </TableRow>
        <TableRow >
            <TextView android:text="@string/ProfileRentBuyTV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/RentBuy"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:paddingTop="20dp"
                android:paddingLeft="10dp" />
        </TableRow>

        <TableRow >
            <TextView android:text="@string/ProfileSaleValueTV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/SellPrice"
                android:textStyle="bold|italic"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
        </TableRow>

        <TableRow >
            <TextView android:text="@string/ProfileRentalPricePDTV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/RentalPrice"
                android:textStyle="bold|italic"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_marginTop="15dp"/>
        </TableRow>

        <TableRow >

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ProfileTitleTV"
        android:id="@+id/ProfileTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:paddingTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/ProfileNameHint"
        android:ems="10"
        android:id="@+id/nameET"
        android:layout_below="@+id/ProfileTV"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:textStyle="italic"
        android:layout_marginRight="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/addressET"
        android:layout_below="@+id/nameET"
        android:layout_alignStart="@+id/nameET"
        android:hint="@string/ProfileAddressHint"
        android:layout_marginRight="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailET"
        android:layout_below="@+id/addressET"
        android:layout_alignParentEnd="true"
        android:hint="@string/ProfileEmailHintTV"
        android:layout_marginRight="5dp"
        />

    <Spinner
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:id="@+id/rentBuySpinner"
        android:layout_marginLeft="80dp"
        android:paddingTop="15dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/tableLayout" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:ems="10"
        android:id="@+id/salePriceET"
        android:layout_below="@+id/rentBuySpinner"
        android:layout_alignRight="@+id/emailET"
        android:layout_marginTop="10dp"
        android:hint="€____"
        android:onClick="SalePrice"
        />

    <EditText
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:id="@+id/rentalPriceET"
        android:layout_below="@id/salePriceET"
        android:layout_alignRight="@+id/emailET"
        android:layout_marginTop="20dp"
        android:hint="€____"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Submit Dress"
        android:id="@+id/createDatabase"
        android:textStyle="bold|italic"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:onClick="InsertIntoDatabase"
        android:clickable="true" />


<!--

    <EditText
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:id="@+id/deleteDressET"
        android:hint="Dress ID..."
        android:inputType="textMultiLine"
        android:textSize="10sp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_alignStart="@+id/rentalPriceET"
        android:layout_below="@+id/rentalPriceET"
        android:layout_marginTop="10dp"/>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete dress"
        android:id="@+id/deleteDressBut"
        android:onClick="deleteDressBut"
        android:layout_below="@+id/tableLayout"
        android:layout_alignEnd="@+id/deleteDressET" />

    <TextView android:text="Delete Dress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/deleteDressTV"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:padding="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Profile"
        android:id="@+id/button"
        android:onClick="getProfile"
        android:layout_below="@+id/deleteDressBut"
        android:layout_toStartOf="@+id/ProfileTV" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/deleteDressBut"
        android:layout_toEndOf="@+id/createDatabase" />

-->
</RelativeLayout>