<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView5"
        android:src="@drawable/weddingdress2"
        android:alpha=".2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DressXMLTitle"
        android:id="@+id/searchTV"
        android:gravity="top|center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:paddingTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="20dp"
            android:columnCount="2"
            android:rowCount="8"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_below="@+id/searchTV"
            android:id="@+id/gridLayout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/PhotoImportTV"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/photoImporTV"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/photoImportBut"
                android:onClick="importPhotoFromGallery"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="By Designer"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/dressDesignerTV"
                />

            <Spinner
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/designerSpinner"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/StyleTV"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/styleTV"
                />

            <Spinner
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/styleSpinner"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SizeTV"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/sizeTV"
                />

            <Spinner
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/sizeSpinner"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Veil"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/vielTV"
                />

            <Spinner
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/vielSpinner"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DryCleaningTV"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/CleaningTV"
                />

            <Spinner
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/cleaningSpinner"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Enter_Location_Button"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:id="@+id/locationTV"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:id="@+id/locationButton"
                android:onClick="enterLocation"/>


    </GridLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Submit dress"
        android:id="@+id/searchBut"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:onClick="InsertIntoTheDatabase"
        android:textColor="#E0ECEC"
        android:background="#34B4A7"/>

</RelativeLayout>