<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:alpha="0.2"
        android:src="@drawable/weddingaltar3" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/logo"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/NewUserRegisterButton"
        android:id="@+id/registerButton"
        android:textSize="20sp"
        android:onClick="registerClicked"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#E0ECEC"
        android:background="@drawable/buttonfeatures"/>

    <Button
        android:layout_width="300dp"
        android:textColor="#E0ECEC"
        android:background="@drawable/buttonfeatures"
        android:layout_height="40dp"
        android:text="@string/UserLogInButton"
        android:id="@+id/LogInButton"
        android:textSize="20dp"
        android:onClick="logInClicked"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="OR"
        android:id="@+id/tv1"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:textColor="#EF2C35"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToggleMusicTV"
        android:id="@+id/toggleMusic"
        android:textStyle="italic"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/musicTB"
        android:layout_alignStart="@+id/LogInButton" />


    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:id="@+id/musicTB"
        android:onClick="musicEntered"
        android:textStyle="italic|bold"
        android:checked="true"
        android:layout_below="@+id/LogInButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="28dp"
        android:layout_marginTop="20dp"
        />

<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose your theme"
        android:id="@+id/ThemeTV"
        android:textStyle="italic"
        android:textSize="20dp"
        android:layout_below="@+id/musicTB"
        android:layout_alignStart="@+id/toggleMusic"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/themeSpinner"
        android:layout_below="@+id/musicTB"
        android:layout_alignBottom="@+id/ThemeTV"
        android:layout_alignStart="@+id/musicTB"
        android:layout_alignEnd="@+id/musicTB"
        android:layout_marginTop="20dp"
        android:onClick="changeTheme"/>

-->
</RelativeLayout>
